change name to CRI

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -44,8 +44,9 @@
     
     Software development organizations need a framework to define
     what measurements should be tracked and how those measurements
-    should be reported.  The MPI framework provides a solid foundation
-    for a consistent evaluation.  MPI analyzes the historical performance
+    should be reported.  The Cumulative Result Indicator (CRI)
+    framework provides a solid foundation
+    for a consistent evaluation.  CRI analyzes the historical performance
     of an SDO
     to create a baseline in order to provide a broad
     view of the overall organization.  It is common for software development
@@ -559,11 +560,11 @@
     The remainder of this dissertation is divided into 5 chapters.  The next chapter provides
     an overview of software, software development lifecycles, software engineering, and software
     development organizations.  Chapter 3 introduces what is meant by the term data-driven
-    software engineering. Chapter 4 then provides an explanation of the Master Performance 
-    Indicator (MPI).  It will present the essential elements for calculating the MPI, as well
-    as the formulas, framework, and data necessary to produce the MPI. Chapter 5 provides
-    a technological framework for generating and storing the current and historical MPI values.
-    Chapter 6 demostrates how MPI can be implemented in a software development portion of 
+    software engineering. Chapter 4 then provides an explanation of the Cumulative
+    Result Indicator (CRI).  It will present the essential elements for calculating the CRI, as well
+    as the formulas, framework, and data necessary to produce the CRI. Chapter 5 provides
+    a technological framework for generating and storing the current and historical CRI values.
+    Chapter 6 demostrates how CRI can be implemented in a software development portion of 
     a large financial institution.  Chapter 7 concludes the dissertation with a summary
     of the results and some possible future directions for further enhancements. 
 
