--- a/paper_60_tooling.tex
+++ b/paper_60_tooling.tex
@@ -5,20 +5,7 @@
 % new section
 \section{TOOLING}
 
-
-\subsection{SDLC DASHBOARD}
-This maybe needs a name: Project MPI????  The goal of this project is to provide a tool that
-given the 5 files will be able to provide a score for the software department.  It should run 
-as a web application.
-
-This section will provide information to install and run a tool for calculating MPI for an organization.
-\subsubsection{INTRODUCTION}
-\subsubsection{OVERVIEW}
-\subsubsection{INSTALLATION}
-\subsubsection{DATABASE}
-maybe MongoDB, maybe PostgreSQL/MySQL
-\subsubsection{WEBSERVER}
-The software can either run standalone on cloud-hosted platform such as Heroku.  Try using Play Framework 2 with Authenticate.
+% section not used in final dissertation
 
 
 \end{document}
