--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -8,11 +8,11 @@ Data has been collected from the software development processes of
 an SDO within a large financial institution.
 The data collection was from 2007 to January 2015. As would be expected
 in any organization, not all 5 elements have data for the entire duration.
-MPI can still work because the calculations will only include
-the available elements.  This section will provide the analysis performed and the MPI scores of that data.  An example of the initial analysis is included in \cref{app:case}.
+CRI can still work because the calculations will only include
+the available elements.  This section will provide the analysis performed and the CRI scores of that data.  An example of the initial analysis is included in \cref{app:case}.
 
 \subsection{WITH HISTORICAL DATA}
-    This first case will demonstrate how to calculate the MPI for an
+    This first case will demonstrate how to calculate the CRI for an
     organization when historical data is present.  
     \subsubsection{QUALITY}
         Luckily, the data for quality goes from October 2007 to January 2015
@@ -28,10 +28,10 @@ the available elements.  This section will provide the analysis performed and th
     \subsubsection{OVERALL}
         All of the months do not include the same elements.  
 
-An MPI calculation analyzing historical performance.
+An CRI calculation analyzing historical performance.
 
 %%\subsection{WITHOUT HISTORICAL DATA}
 
-%%An MPI calculation with default values for quality, schedule and requirements.
+%%An CRI calculation with default values for quality, schedule and requirements.
 
 \end{document}
