--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -4,18 +4,18 @@
 \section{FUTURE WORK}
 
 Due to the number of issues with surveys.  One area of future work would be indentifying
-a general set of questions that would best fit MPI.  This set would have to include
+a general set of questions that would best fit CRI.  This set would have to include
 the best number of questions, order of questions and wording of questions.  Therefore,
 any new organization would not have to determine their own survey, but rather just use the
 predetermined set of questions.  It would even be advantageous to build a software system to
 handle the survey distribution and collection.  Ideally, the results would automatically be
-inserted into the appropriate database tables for MPI scoring. 
+inserted into the appropriate database tables for CRI scoring. 
 
-As shown in Table \ref{tab:bsc}, MPI is currently not addressing 2 characteristics of the balanced scorecard.  If the SDO does not operate on a fixed budget, MPI could be 
+As shown in Table \ref{tab:bsc}, CRI is currently not addressing 2 characteristics of the balanced scorecard.  If the SDO does not operate on a fixed budget, CRI could be 
 expanded to include another element for financial data. The challenge arises when
 determining how to relate the SDO performance to finances.  The most likely scenario
 would be a method to either select or predicted the expected software sales
-for a month.  Then every month create an MPI element score that reflects
+for a month.  Then every month create an CRI element score that reflects
 how much the expected sales were exceeded or missed.  The other missing
 balanced scorecard characteristic is learning and growth.  Those are very difficult
 to quantitatively measure.  In this case some possible data points might be:
@@ -28,7 +28,7 @@ a baseline and measuring with respect to that baseline.
 \section{CONCLUSION}
 
 There are many metrics that can be used to evaluate a Software Development Organization (SDO). 
-Knowing which metrics to use and what they all mean can be a daunting task.  MPI is a
+Knowing which metrics to use and what they all mean can be a daunting task.  CRI is a
 proposed solution to the difficulty of measuring an SDO.
 
 Upon completion, this work shall identify:
@@ -36,9 +36,9 @@ Upon completion, this work shall identify:
     \item Define \textbf{What} characteristics should be measured for an SDO
     \item Define \textbf{How} to measure those characteristics
     \item Map the relationship or lack of relationship with a Balanced Scorecard
-    \item Create a Framework to store the necessary data for MPI
-    \item Outline a Process to generate the MPI score
-    \item Provide an example MPI score with real data
+    \item Create a Framework to store the necessary data for CRI
+    \item Outline a Process to generate the CRI score
+    \item Provide an example CRI score with real data
 \end{itemize}
 
 An entire software development organization (SDO) needs to be measured and analyzed properly, not just the development portion. This document has provided an overview of what indicators need to be measured for an SDO, and how those indicators can be combined to form a single number indicating the performance score of a software development organization.  Also, a framework to store this data was discussed.
