--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -20,7 +20,7 @@
     \end{enumerate}
     
     This work will focus on steps 1 and 2.  The process issue is the overall
-    effectiveness of the SDO.  Section \ref{sec:MPI} will cover step 2 as
+    effectiveness of the SDO.  Section \ref{sec:CRI} will cover step 2 as
     it relates to an SDO.  Step
     3 will be different for each SDO, but Section \ref{sec:SDLC-AE} provides
     a bit of guidance for storing the correct information.  It is up to the
@@ -365,7 +365,7 @@
         important to measure as many duties as possible.  
     
         How can the PIs, RIs, KRIs, and KPIs be combined to form a single
-        value called an MPI (Master Performance Indicator)?  If the indicators
+        value called the CRI (Cumulative Result Indicator)?  If the indicators
         are targeted for upper management to understand performance, then 
         KPIs are not the correct indicators.  KPIs are targeted towards
         immediate action and future performance.  RIs and KRIs are the most
