--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -1,15 +1,15 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
-\section{MASTER PERFORMANCE INDICATOR (MPI)}
-\label{sec:MPI}
+\section{CUMULATIVE RESULT INDICATOR (CRI)}
+\label{sec:CRI}
 
     Software development organizations struggle to measure overall performance.  
-    The Master Performance Indicator (MPI) is an algorithm to provide a single 
+    The Cumulative Result Indicator (CRI) is an algorithm to provide a single 
     number score to measure the performance of a software development organization. 
     It works by statistically analyzing the past performance of the 
     organization and using that information to score an organization 
-    on current performance.  MPI is a collection of the following 5 
+    on current performance.  CRI is a collection of the following 5 
     elements, which are actually KRIs,
     for a software development organization.
     \textbf{
@@ -21,26 +21,26 @@
         \item Requirements
     \end{enumerate}
     }
-    A separate MPI
+    A separate CRI
     score is calculated for each element and 
     then aggregated together to form an overall 
-    MPI score.  A new MPI score will be calculated based
+    CRI score.  A new CRI score will be calculated based
     upon the selection of a given time period (weekly, monthly, quarterly).
-    \textbf{MPI is not meant to be comparative between
+    \textbf{CRI is not meant to be comparative between
     organizations, but to measure the amount of increase or decrease
-    a single organization exhibits across elements}.  MPI is made to be easily 
+    a single organization exhibits across elements}.  CRI is made to be easily 
     expandable to other elements if desired.
     
-    The scores for MPI will range from -1, indicating the worst 
+    The scores for CRI will range from -1, indicating the worst 
     performance, all the way to +1, indicating perfection.
     A score of 0 is an indication of meeting the basic expectations. 
     A negative score indicates under-performance and a 
     positive score indicates over-performance.   Here are some 
-    examples. An MPI score of 0.35 means the organization is 
+    examples. An CRI score of 0.35 means the organization is 
     performing 35\% better than expected.  Conversely, a score 
     of -0.15 means an organization is performing 15\% worse than expected.  
 
-    Below are the attributes of the MPI scoring.
+    Below are the attributes of the CRI scoring.
     \begin{itemize}
         \item The range of scores must have equal values above and below 0
         \item The minimum score must equate to the worst possible 
@@ -59,8 +59,8 @@
     The scaling is denoted with the variable $k$.  The scale will be the same
     for all 5 elements.
     
-    \subsection{ELEMENTS OF MPI}
-        The MPI score consists of data collected from five
+    \subsection{ELEMENTS OF CRI}
+        The CRI score consists of data collected from five
         different elements of an SDO.  
         \begin{enumerate}
             \item Quality
@@ -124,7 +124,7 @@
                 certain data needs to be obtained in order to measure
                 performance. Table \ref{tab:qualitydata} identifies
                 the columns of data that will be used to create
-                a score for the quality element of MPI.  
+                a score for the quality element of CRI.  
                 Each column is classified as \textit{required} or
                 \textit{optional}.  That is to allow some flexibility
                 in the model for organizations that collect
@@ -158,7 +158,7 @@
                     
                     \bottomrule
                     
-                    \caption{QUALITY DATA NEEDED FOR MPI}
+                    \caption{QUALITY DATA NEEDED FOR CRI}
                     \label{tab:qualitydata}
                 \end{longtable}
                 
@@ -265,7 +265,7 @@
                 will not change.  The function $f$ can be the same for all 
                 Application IDs or it can be different for each Application ID
                 or any combination of Application IDs.   It serves as the 
-                quality baseline for MPI. 
+                quality baseline for CRI. 
                 All future quality scores will be dependent upon the original
                 $f$.  Once set, the model will not change.
                 
@@ -316,7 +316,7 @@
             contract specifying the amount of time software will be available during a
             given time period. } and measure 
             performance against that SLA.  The following section will outline to data needed to properly
-            calculate an SLA and the data needed to calculate the MPI score for availability.
+            calculate an SLA and the data needed to calculate the CRI score for availability.
             
             Special Note: The Service ID for availability does not have to be the same
             as the Application ID for quality or any of the other elements.  Some 
@@ -327,11 +327,11 @@
             
             \paragraph{AVAILABILITY DATA}
                 Table \ref{tab:availdata} identifies the necessary data to calculate
-                the MPI element score for availability.  Notice the three optional 
+                the CRI element score for availability.  Notice the three optional 
                 fields: \textit{Uptime}, \textit{Scheduled Downtime}, and 
                 \textit{Unscheduled Downtime}; they are optional because they can be
                 used to calculated the \textit{Percent Uptime}.  The \textit{Percent Uptime}
-                is the important value for the MPI schedule score.  Here are the two common
+                is the important value for the CRI schedule score.  Here are the two common
                 approaches for calculating percent uptime:
                 
                 The preferred method
@@ -375,7 +375,7 @@
                     
                     \bottomrule
                     
-                    \caption{AVAILABILITY DATA NEEDED FOR MPI}
+                    \caption{AVAILABILITY DATA NEEDED FOR CRI}
                     \label{tab:availdata}
                 \end{longtable}
             
@@ -421,14 +421,14 @@
             customer, internal or external business partner, or any other person deemed influential
             to the development of the software.
             
-            \textit{If one element of MPI was to be rated as the most important, satisfaction
+            \textit{If one element of CRI was to be rated as the most important, satisfaction
             would be it.}  
             Without satisfied customers, the rest of the measures do not matter.
             For example, having a quality
             application that is always available does not matter if the
             application is not what the customer wants.  
             
-            Surveys are used to measure satisfaction for MPI.  A series of statements will
+            Surveys are used to measure satisfaction for CRI.  A series of statements will
             be presented to all or a subset of the customers.  Any customer that chooses
             to respond to the survey is considered a respondent.  A respondent can rate
             statements based upon a Likert Scale\footnote{"The Likert Scale presents 
@@ -499,7 +499,7 @@
                 \item[Sampling] \hfill \\
                     Next is the issue of sampling.  Not every customer can be surveyed, so 
                     sample sets os customers need to be presented with a survery.  
-                    In the case of MPI, there are 2 possible scenarios for sampling.  
+                    In the case of CRI, there are 2 possible scenarios for sampling.  
                     \begin{description}
                     \item[First]
                     When an SDO is part of a larger organization, there typically is
@@ -552,7 +552,7 @@
             \paragraph{SATISFACTION DATA}
                 Once the surveys have been distributed and the results collected, Table
                 \ref{tab:satisfactiondata} displays the data that needs to be collected 
-                in order to calculate the satisfaction element score for MPI.
+                in order to calculate the satisfaction element score for CRI.
                 \begin{longtable}{@{}l rr rr}
                     \toprule%
                      \centering%
@@ -579,7 +579,7 @@
                     
                     \bottomrule
                     
-                    \caption{SATISFACTION DATA NEEDED FOR MPI}
+                    \caption{SATISFACTION DATA NEEDED FOR CRI}
                     \label{tab:satisfactiondata}
                 \end{longtable}
             
@@ -622,7 +622,7 @@
             schedule adherence. Without tracking and measuring schedule adherence, it will
             not improve.  
             
-            The MPI schedule score provides a numeric value to indicate the amount 
+            The CRI schedule score provides a numeric value to indicate the amount 
             schedules are missed or exceeded.  The score provides a cumulative measure
             of the performance as compared to other months.
             The score is based upon the historical deviance of estimates for
@@ -637,9 +637,9 @@
                 In order to calculate the schedule score, certain dates
                 need to be present. Table \ref{tab:scheduledata} outlines
                 the necessary data for schedules.  One date is considered
-                optional as it is not used in the MPI calculation, but it
+                optional as it is not used in the CRI calculation, but it
                 is an important date that could be useful for future
-                enhancements to MPI.
+                enhancements to CRI.
             
                 \begin{longtable}{@{}l rr rr}
                     \toprule%
@@ -666,7 +666,7 @@
                     
                     \bottomrule
                     
-                    \caption{SCHEDULE DATA NEEDED FOR MPI}
+                    \caption{SCHEDULE DATA NEEDED FOR CRI}
                     \label{tab:scheduledata}
                 \end{longtable}
                     
@@ -701,9 +701,9 @@
                 Distribution Function (C.D.F.). The C.D.F. maps the values
                 to a percentile rank within the distribution \cite{Downey2011}.
                 The C.D.F. will be transformed to create
-                the schedule score for MPI. Since all C.D.F. functions fall within the
+                the schedule score for CRI. Since all C.D.F. functions fall within the
                 range $[0,1]$, the function needs to be shifted to center around 0, and then
-                doubled to fill the desired range of $[-1,1]$. Thus the MPI schedule score
+                doubled to fill the desired range of $[-1,1]$. Thus the CRI schedule score
                 for each project becomes the following.
                 
                 \[
@@ -810,7 +810,7 @@
                     
                     \bottomrule
                     
-                    \caption{REQUIREMENTS DATA NEEDED FOR MPI}
+                    \caption{REQUIREMENTS DATA NEEDED FOR CRI}
                     \label{tab:req}
                 \end{longtable}
             
@@ -827,19 +827,19 @@
                 \end{itemize}
             
 
-        \subsubsection{OVERALL MPI SCORE}
-            In order to accomplish the single number score that MPI requires,
+        \subsubsection{OVERALL CRI SCORE}
+            In order to accomplish the single number score that CRI requires,
             the 5 element scores must be combined. The combination of the scores
             is a weighted average.  The weights can be set based upon the 
-            priority of the SDO.  Thus, the overall MPI score is calculated as below.
+            priority of the SDO.  Thus, the overall CRI score is calculated as below.
             
             \[
-                MPI =\sum\limits^n_{i=1} w_i S_i \text{ where } \sum\limits^n_{i=1} w_i = 1
+                CRI =\sum\limits^n_{i=1} w_i S_i \text{ where } \sum\limits^n_{i=1} w_i = 1
             \]
 
 
-    \subsection{CORRELATIONS IN MPI}
-        It is possible that 2 or more of the 5 elements of MPI will be correlated.  This means that
+    \subsection{CORRELATIONS IN CRI}
+        It is possible that 2 or more of the 5 elements of CRI will be correlated.  This means that
         one of the elements can be predicted based upon the values of the other elements.  Although
         it is possible for correlation to occur between any of the elements, the satisfaction element
         is an obvious element which deserves attention due to the human involvement of the surveys. 
@@ -852,27 +852,27 @@
         to missing functionality.  
         
         It is impossible to know which or if correlations will always exist.  Thus it is necessary to
-        check for correlations after determining element and overall MPI scores.  
+        check for correlations after determining element and overall CRI scores.  
         If correlation is determined, the element should not be dropped but rather be weighted less than
         the other elements.  This technique keeps the most data available but lessens the importance of
         the correlated element. 
         
-    \subsection{SENSITIVITY OF MPI}
+    \subsection{SENSITIVITY OF CRI}
     \label{sub:sensitivity}
         
-        Some simulations will be run with data from each given distribution.  Then the MPI scores
+        Some simulations will be run with data from each given distribution.  Then the CRI scores
         will be analyzed.
         For more on sensitivity analysis in statistical modeling, see \cite{Saltelli2000}.
 
-    \subsection{MPI COMPARED}
+    \subsection{CRI COMPARED}
     
-        \subsubsection{MPI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
+        \subsubsection{CRI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
     
             Earlier, in the introduction section \ref{subsub:softwareanalytics}, 3 main focus 
             areas  for software
-            analytics were presented.  Table \ref{tab:focusareas} provides a explanation of how MPI addresses
+            analytics were presented.  Table \ref{tab:focusareas} provides a explanation of how CRI addresses
             each focus area.  
-            As can be seen, MPI clearly addresses the 3 main focus areas of software analytics.  MPI does not provide
+            As can be seen, CRI clearly addresses the 3 main focus areas of software analytics.  CRI does not provide
             any mechanisms for improving the focus areas, but it provides a consistent mechanism to measure
             the focus areas. 
             
@@ -880,36 +880,36 @@
                 \toprule%
                  \centering%
                  {\bfseries Focus Area}
-                 & {\bfseries Why MPI?} \\
+                 & {\bfseries Why CRI?} \\
                 
                 \cmidrule[0.4pt](r{0.125em}){1-1}%
                 \cmidrule[0.4pt](lr{0.125em}){2-2}%
                 % \midrule
                 \endhead
                 
-                User Experience & One of the 5 elements of MPI is satisfaction.  While not all of the questions focus solely on the user experience, the entire purpose of the survey is to determine if the user is satisfied
+                User Experience & One of the 5 elements of CRI is satisfaction.  While not all of the questions focus solely on the user experience, the entire purpose of the survey is to determine if the user is satisfied
                 with the software product. Does it have the correct features? Are new features added in a timely manner? Of course, specific survey questions can be created to focus solely on a certain user experience. \\
                 \myrowcolour%
-                Quality & Again, one of the 5 elements specifically focuses on quality.  MPI provides a single number
-                to measure quality.  Therefore, it is easy to track changes in quality over time.  MPI does not address
+                Quality & Again, one of the 5 elements specifically focuses on quality.  CRI provides a single number
+                to measure quality.  Therefore, it is easy to track changes in quality over time.  CRI does not address
                 how to improve the quality, but without a consistent measurement, it would be impossible to determine the change in quality. \\
-                Development Productivity & The combination of MPI elements, schedule and requirements, provide an 
+                Development Productivity & The combination of CRI elements, schedule and requirements, provide an 
                 indication of development productivity. The schedule element measures the productivity
                 related to estimated schedule. Similarly, the requirement element measures the amount of
                 work actually being completed.  \\
                 
                 \bottomrule
                 
-                \caption{SOFTWARE ANALYTICS FOCUS AREAS AND MPI}
+                \caption{SOFTWARE ANALYTICS FOCUS AREAS AND CRI}
                 \label{tab:focusareas}
             \end{longtable}
         
         
-        \subsubsection{MPI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
+        \subsubsection{CRI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
             Also, section \ref{subsub:softwareanalytics} mentions 3 important questions that
             software analytics must address.  Table \ref{tab:questions} presents the 3 questions
-            and a description of how MPI addresses that specific question.  It is clear
-            that MPI addresses the questions.  MPI is a beneficial technique of software
+            and a description of how CRI addresses that specific question.  It is clear
+            that CRI addresses the questions.  CRI is a beneficial technique of software
             analytics when applied to software development organizations.
         
             \begin{longtable}{p{4cm}p{10cm}}
@@ -917,37 +917,37 @@
                 \toprule%
                  \centering%
                  {\bfseries Question}
-                 & {\bfseries Why MPI?} \\
+                 & {\bfseries Why CRI?} \\
                 
                 \cmidrule[0.4pt](r{0.125em}){1-1}%
                 \cmidrule[0.4pt](lr{0.125em}){2-2}%
                 % \midrule
                 \endhead
                 
-                How much better is my model performing than a naive strategy, such as guessing? & MPI 
-                provides consistency which may not exist without it.  Therefore, MPI removes the 
+                How much better is my model performing than a naive strategy, such as guessing? & CRI 
+                provides consistency which may not exist without it.  Therefore, CRI removes the 
                 guesswork of measuring a software development organization. \\
                 \myrowcolour%
-                How practically significant are the results? & The MPI score is consistent
+                How practically significant are the results? & The CRI score is consistent
                 and easy to comprehend.  Thus comparison with past performance is quick 
                 and simple.  This is a significant advantage for software 
                 development organizations. \\
                 How sensitive are the results to small changes in one or more of the inputs? & 
-                The question was extensively addressed in section \ref{sub:sensitivity}.  It appears MPI is
+                The question was extensively addressed in section \ref{sub:sensitivity}.  It appears CRI is
                 not overly sensitive to small changes in the inputs.\\
                 
                 \bottomrule
                 
-                \caption{IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND MPI}
+                \caption{IMPORTANT QUESTIONS FOR SOFTWARE ANALYTICS AND CRI}
                 \label{tab:questions}
             \end{longtable}
 
         
-        \subsubsection{MPI VS. BALANCED SCORECARD}
+        \subsubsection{CRI VS. BALANCED SCORECARD}
             Section \ref{sec:bsc} discusses the characteristics of the 
             balanced scorecard.  Table \ref{tab:bsc} presents a
             comparison of the characteristics of a balanced scorecard
-            versus MPI.
+            versus CRI.
             As the newer 2 characteristics of a balanced scorecard
             have only existed since 2010 and the adoption is limited,
             the comparison will only be against the original 4 balanced
@@ -959,7 +959,7 @@
                 \toprule%
                  \centering%
                  {\bfseries Balanced Scorecard}
-                 & {\bfseries MPI?} 
+                 & {\bfseries CRI?} 
                  & {\bfseries Explanation} \\
                 
                 \cmidrule[0.4pt](r{0.125em}){1-1}%
@@ -968,40 +968,40 @@
                 % \midrule
                 \endhead
                 
-                Financial & No & MPI does not address financial as it is best suited 
+                Financial & No & CRI does not address financial as it is best suited 
                     for an organization that treats software development as a fixed,
-                    budgeted expense. If the budget is fixed, MPI provides a number
+                    budgeted expense. If the budget is fixed, CRI provides a number
                     to indicate the amount of value for that fixed budget.  \\
                 \myrowcolour%
-                Customer Focus & Yes & MPI includes a customer survey which is 
+                Customer Focus & Yes & CRI includes a customer survey which is 
                     completely customer focused.\\
-                Internal Process & Yes & MPI is highly focused on internal processes.
-                    The MPI elements of schedule and requirement are completely
-                    focused on how reality meets the expected process. MPI is
+                Internal Process & Yes & CRI is highly focused on internal processes.
+                    The CRI elements of schedule and requirement are completely
+                    focused on how reality meets the expected process. CRI is
                     negatively impacted when internal processes are followed. \\
                 \myrowcolour%
-                Learning/Growth & No & MPI does not address this characteristic. \\
+                Learning/Growth & No & CRI does not address this characteristic. \\
                 
                 \bottomrule
                 
-                \caption{BALANCED SCORECARD VERSUS MPI}
+                \caption{BALANCED SCORECARD VERSUS CRI}
                 \label{tab:bsc}
             \end{longtable}
 
         
-        \subsubsection{MPI VS. PROJECT MANAGEMENT MEASUREMENT}
+        \subsubsection{CRI VS. PROJECT MANAGEMENT MEASUREMENT}
             Previously in Section \ref{sec:pm}, the project management
             measurement was presented.   Its greatest limitation is the lack of
             focus on the entire SDO.  Project management measurement says 
             nothing about the availability of the software infrastructure
             or the satisfaction of the users.  It is not near as comprehensive
-            as either the balanced scorecard or MPI. Actually, MPI incorporates
+            as either the balanced scorecard or CRI. Actually, CRI incorporates
             the 5 core measurements from project management.
             Plus, the process productivity
             number is less suitable for upper management and more
             suitable for project teams.  Although it does provide a single
             process productivity number, it is does not have the same focus
-            as MPI.
+            as CRI.
             
             
             
