--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -228,7 +228,7 @@
 \subfile{paper_10_intro}
 \subfile{paper_20_sdo}
 \subfile{paper_30_measure}
-\subfile{paper_40_mpi}
+\subfile{paper_40_cri}
 \subfile{paper_50_sdlc-ae}
 %\subfile{paper_60_tooling}
 \subfile{paper_70_case-study}
