adding reference to github

--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -5,7 +5,7 @@
 \section{CASE STUDY: SCORING AN SDO OF A LARGE FINANCIAL INSTITUTION}
 
 Data has been collected from the software development processes of
-an SDO within a large financial institution.
+an SDO within a large financial institution\footnote{All the raw data files are available at \cite{Swanstrom2015}}.
 The data collection was from 2007 to January 2015. As would be expected
 in any organization, not all 5 elements have data for the entire duration.
 CRI can still work because the calculations will only include
