--- a/references.bib
+++ b/references.bib
@@ -884,6 +884,14 @@
     address = {New York, NY, USA},
     keywords = {communication, software development, user centered design},
 } 
+@online{Swanstrom2015,
+    author = {Ryan Swanstrom},
+    title = {dissertation-scoring-sdo},
+    url = {https://github.com/ryanswanstrom/dissertation-scoring-sdo},
+    year = {2015},
+    month = {3},
+    organization = {Github}
+}
 @article{Taylor2010,
     author = {Taylor, Quinn and Giraud-Carrier, Christophe},
     title = {Applications of Data Mining in Software Engineering},
