minor changes around the acronym SDO uploaded new output PDF file

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -47,7 +47,7 @@
     should be reported.  The Cumulative Result Indicator (CRI)
     framework provides a solid foundation
     for a consistent evaluation.  CRI analyzes the historical performance
-    of an SDO
+    of a Software Development Organization (SDO)
     to create a baseline in order to provide a broad
     view of the overall organization.  It is common for software development
     organizations to measure and focus soley on the source code
