--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -3,7 +3,7 @@
 
 
 \section{A SOFTWARE DEVELOPMENT ORGANIZATION (SDO)}
-A \textit{Software Development Organization} is any organization or subset of an organization that is responsible
+A \textit{Software Development Organization (SDO)} is any organization or subset of an organization that is responsible
 for the creation, deployment, and maintenance of software.  Many times a software development organization
 is a company that produces software.  Other times, a software development organization is contained
 within the Information Technology department of a larger organization. Some of the job roles
