--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -110,7 +110,7 @@
         will explain the type of indicators in more detail and provide
         some examples for an SDO.
         
-        \subsubsection{RESULT INDICATORS (RI) FOR SDO}
+        \subsubsection{RESULT INDICATORS (RI) FOR AN SDO}
             \textit{Result Indicators} are performance 
             measures that summarize activity.  All financial performance
             measures are result indicators.  Result indicators
@@ -148,7 +148,7 @@
                 \label{tab:RI}
             \end{longtable}
             
-        \subsubsection{KEY RESULT INDICATOR (KRI) FOR SDO}
+        \subsubsection{KEY RESULT INDICATOR (KRI) FOR AN SDO}
             \textit{Key Result Indicators} are measures of multiple
             activities that give a clear picture of whether the
             organization is traveling in the right direction.  Unfortunately,
@@ -186,7 +186,7 @@
             \end{longtable}
             
         
-        \subsubsection{PERFORMANCE INDICATOR (PI) FOR SDO}
+        \subsubsection{PERFORMANCE INDICATOR (PI) FOR AN SDO}
             \textit{Performance Indicators} are nonfinancial performance measures
             that help a team align themselves with the organizations 
             strategy.  These are important to the organizations success, but
@@ -220,7 +220,7 @@
                 \label{tab:PI}
             \end{longtable}
             
-        \subsubsection{KEY PERFORMANCE INDICATOR (KPI) FOR SDO}
+        \subsubsection{KEY PERFORMANCE INDICATOR (KPI) FOR AN SDO}
             \textit{Key Performance Indicators} are performance measures
             focusing on critical aspects for current and future organizational
             success.  Notice, KPIs are not focused on historical performance,
