--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -5,7 +5,7 @@
 \label{sec:CRI}
 
     Software development organizations struggle to measure overall performance.  
-    The Cumulative Result Indicator (CRI) is an algorithm to provide a single 
+    The \textit{Cumulative Result Indicator (CRI)} is an algorithm to provide a single 
     number score to measure the performance of a software development organization. 
     It works by statistically analyzing the past performance of the 
     organization and using that information to score an organization 
@@ -312,7 +312,7 @@
         \subsubsection{AVAILABILITY}
             All the new requirements and great quality do not matter if the software is not available.
             All the new features and great quality do not matter if the software is not available.  Thus it
-            is essential to set an expected Service Level Agreement (SLA)\footnote{For an SDO, an SLA is a 
+            is essential to set an expected Service Level Agreement (SLA)\footnote{For an SDO, the SLA is a 
             contract specifying the amount of time software will be available during a
             given time period. } and measure 
             performance against that SLA.  The following section will outline to data needed to properly
