added some database diagrams single space the references

--- a/appendices.tex
+++ b/appendices.tex
@@ -55,7 +55,7 @@ APPENDIX\\
 \section{CASE STUDY SOURCE CODE} 
 \label{app:case}
 
-%% set appendix to single space for th source code
+%% set appendix to single space for the source code
 \linespread{1.0}
 
 %% options for lists
