--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -49,7 +49,7 @@ will be much easier to create and gamification will be much more easily attainab
             \includegraphics[scale=.55]{images/raw_tables.png}
             \caption{TABLES FOR RAW CRI DATA}
             \label{fig:raw}
-        \end{figure}%
+        \end{figure}
         
         Appendix \ref{src:rawSQL} provides the necessary SQL statements to create the 
         database tables for storing the raw CRI data.  The SQL is written for an Oracle
@@ -60,12 +60,26 @@ will be much easier to create and gamification will be much more easily attainab
     
         Appendix \ref{src:scoreSQL} provides the necessary SQL statements to create the 
         database tables for storing the intermediate CRI scores.
+        
+       \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=.55]{images/score_tables.png}
+            \caption{TABLES FOR INTERMEDIATE CRI SCORES}
+            \label{fig:score_tables}
+        \end{figure}%
     
     \subsubsection{FINAL SCORE TABLES FOR CRI}
     
         Appendix \ref{src:overallscoreSQL} provides the necessary SQL statements to create the 
         database tables for storing the final scores for each element and the final 
         overall CRI scores for each time frequency.
+        
+       \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=.55]{images/final_score_tables.png}
+            \caption{TABLES FOR FINAL CRI SCORES}
+            \label{fig:final_score_tables}
+        \end{figure}
 
 \subsection{QUERIES}
     The section will provide the necessary SQL queries to obtain the correct data
