--- a/references.bib
+++ b/references.bib
@@ -889,8 +889,7 @@
     title = {dissertation-scoring-sdo},
     url = {https://github.com/ryanswanstrom/dissertation-scoring-sdo},
     year = {2015},
-    month = {3},
-    organization = {Github}
+    month = {3}
 }
 @article{Taylor2010,
     author = {Taylor, Quinn and Giraud-Carrier, Christophe},
