--- a/bibliography.tex
+++ b/bibliography.tex
@@ -7,6 +7,9 @@
 REFERENCES\\
 \end{center}
 
+%% set references to single space
+\linespread{1.1}
+
 %% more info/resources:
 % http://www.math.uiuc.edu/~hildebr/tex/bibliographies.html
 % http://www.andy-roberts.net/misc/latex/latextutorial3.html
