some minor typos and proof reading

--- a/appendices.tex
+++ b/appendices.tex
@@ -11,13 +11,13 @@ APPENDIX\\
 \end{center}
 \addcontentsline{toc}{section}{APPENDIX}
 
-\section{Detailed Steps of the SDLC}
+\section{DETAILED STEPS OF THE SDLC}
 \label{app:detailedSDLC}
 
     Often times the SDLC contains more than the 5 basic steps of requirements, design,
     implementation, testing, and  deployment/maintenance.  Those are the high-level
     phases, but many steps are required to complete each phase.  The following list
-    provides a more detailed version of what needs to be accomplished in the 
+    provides a more detailed list of what needs to be accomplished in the 
     entire life cycle of software development. These steps do not need 
     to occur in a sequential fashion.
 
