--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -376,7 +376,7 @@
     of that software is better or worse than some other software
     with $X$ defects.  One piece of software can be 
     larger\footnote{Saying a piece of software is larger can be a 
-    rather arbitrary statement.  Does that mean the software requires 
+    rather arbitrary statement.  It can mean the software requires 
     more computing time, has more lines of code, more documentation, 
     more hours spent on development, or some other arbitrary measure.}
     or more complex.  Thus, finding a value for quality is easier 
