--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -244,9 +244,9 @@
             to identify and measure the KPIs for an SDO. Antolic's strategy
             focused around 7 KPIs.
             \begin{enumerate}
-                \item Schedule Adherence
-                \item Assigned Content Adherence
-                \item Cost Adherence
+                \item Schedule adherence
+                \item Assigned content adherence
+                \item Cost adherence
                 \item Fault slip through
                 \item Trouble report closure rate
                 \item Cost per defect
@@ -312,10 +312,8 @@
           \item Customer Focus
           \item Internal Process
           \item Learning and Growth
-          \item Employee Satisfaction\footnote{\label{ft:bsc} These 2 
-                characteristics are not a part of the original balanced 
-                scorecard presented by Kaplan and Norton in 1992.  
-                They  were added later by Parmenter \cite{parmenter2010}. }
+          \item Employee Satisfaction\footnote{\label{ft:bsc} Added 
+          later by Parmenter \cite{parmenter2010}. }
           \item Environment/Community\textsuperscript{\ref{ft:bsc}}
         \end{enumerate}
         
