adding some SDLC-AE diagrams

--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -7,7 +7,7 @@
 
 In order for an SDO to properly track the elements of CRI, a data storage system should be available to store the appropriate data.  A consistent storage system should help to avoid the problem of inaccurate
 data caused by numerous manipulations of the existing data \cite{Olson2003}. Plus, if the system
-is implemented correctly by allowing limited changes to existing data, it will be able to alliviate
+is implemented correctly by allowing limited changes to existing data, it will be able to alleviate
 some of the dishonesty that is currently present in software projects \cite{Rost2011}. This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
 
 
@@ -15,7 +15,7 @@ Once all the SDLC data is collected into a single place, there are many possible
 will be much easier to create and gamification will be much more easily attainable.  
 
 \begin{figure}[ht]
-\includegraphics[scale=.7]{images/sdlc-ae.png}
+\includegraphics[scale=.6]{images/sdlcae.png}
 \caption{SDLC ANALYTIC ENGINE}
 \label{fig:sdlc-ae}
 \end{figure}
