--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -25,6 +25,11 @@ courses and career growth.  Again, once data exists, the problem becomes finding
 a baseline and measuring with respect to that baseline.
 
 
+\begin{figure}[ht]
+\includegraphics[scale=.6]{images/sdlcae-adv.png}
+\caption{SDLC ANALYTIC ENGINE ADVANCED}
+\label{fig:sdlc-ae-adv}
+\end{figure}
 
 % new section
 \section{CONCLUSION}
